[TASK]    Streamline wording of "FlexForm". Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/70/
[TASK]    Simplify determining of log level in ext_localconf.php. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/71
[TASK]    Add "ext-pdo" as requirement in composer.json. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/73
[DOCS]    Improve chapter about search word length. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/68
[DOCS]    Add tip for adding more search metrics to Matomo. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/76

Version 4.3.1, February 2022
[BUGFIX]  Fix bug which made filtering unusable. https://github.com/tpwd/ke_search/issues/74

Version 4.3.0, February 2022
[!!!]     This version removes the dashboard requirement introduced in the last version and makes it optional again.
[!!!]     This version makes it possible to index "shortcut" content elements. For that you need to add "shortcut" to the list "Content element types which should be indexed" in existing indexer configurations.
[FEATURE] Index shortcut content records in page indexer. Thanks to Benjamin Franzke. https://github.com/tpwd/ke_search/pull/7
[FEATURE] Add dashboard preset. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/41
[FEATURE] Switch off filter rendering in result list if not needed. Thanks to Stephan Bauer. https://github.com/tpwd/ke_search/pull/3
[BUGFIX]  Fix PHP8 issues in frontend. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/27
[BUGFIX]  Fix PHP8 issues in backend. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/28
[BUGFIX]  Fix PHP8 issues in indexers. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/26
[BUGFIX]  Fix typos. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/32
[BUGFIX]  Display hours in status widget correctly. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/38