@@ -6,6 +6,7 @@ Upcoming version
 [TASK]    Streamline wording of "FlexForm". Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/70/
 [TASK]    Simplify determining of log level in ext_localconf.php. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/71
 [TASK]    Add "ext-pdo" as requirement in composer.json. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/73
+[TASK]    Add log message when inserting or updating records. https://github.com/tpwd/ke_search/issues/58
 [DOCS]    Improve chapter about search word length. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/68
 [DOCS]    Add tip for adding more search metrics to Matomo. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/76
 
